--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 
 h1 {
     text-align: center;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Roboto Slab;
     font-size: 310%;
 }
 
@@ -21,6 +21,9 @@ ul {
 }
 
 nav {
+    position: sticky;
+    top: 0;
+    background-color: white;
     display: block;
     padding-right: 10px;
     text-align: center;
@@ -38,6 +41,7 @@ li {
 
 body {
     background-color: lightgrey;
+    font-family: Source Sans Pro;
 }
 
 h5 {
@@ -46,11 +50,27 @@ h5 {
 
 main {
     text-align: justify;
-    font-family: helvetica;
+    font-family: Roboto Slab;
 }
 
 .more-articles {
-    text-align: justify;
+    border-top: 0.1em solid #eee;
+    margin-top: 1em;
+    font-family: Roboto Slab;
+}
+
+.more-articles section {
+    display: inline-block;
+    width: 44%;
+    margin: 0 1em;
+}
+
+.more-articles img {
+    width: 100%;
+}
+
+.more-articles {
+    text-align: left;
     font-family: helvetica;
 }
 
